--- a/code/app/src/main/res/layout/activity_edit_delete_mood.xml
+++ b/code/app/src/main/res/layout/activity_edit_delete_mood.xml
@@ -8,7 +8,7 @@
 
 
     <ImageButton
-        android:id="@+id/imageButton_DeleteEditMoodFrag_back"
+        android:id="@+id/imageButton_DeleteEditMoodActivity_back"
         android:layout_width="48dp"
         android:layout_height="52dp"
         android:layout_marginTop="12dp"
@@ -16,12 +16,12 @@
         android:background="@color/black_background"
         android:contentDescription="Back_button"
         android:src="@drawable/ic_white_back_button"
-        app:layout_constraintEnd_toStartOf="@+id/textView_DeleteEditMoodFrag_title"
+        app:layout_constraintEnd_toStartOf="@+id/textView_DeleteEditMoodActivity_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/imageButton_DeleteEditMoodFrag_delete"
+        android:id="@+id/imageButton_DeleteEditMoodActivity_delete"
         android:layout_width="63dp"
         android:layout_height="57dp"
         android:layout_marginStart="76dp"
@@ -34,11 +34,11 @@
         android:src="@drawable/ic_delete_button"
         app:backgroundTint="@color/black_background"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView_DeleteEditMoodFrag_title"
+        app:layout_constraintStart_toEndOf="@+id/textView_DeleteEditMoodActivity_title"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView_DeleteEditMoodFrag_title"
+        android:id="@+id/textView_DeleteEditMoodActivity_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="132dp"
@@ -51,7 +51,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/imageButton_DeleteEditMoodFrag_selectImage"
+        android:id="@+id/imageButton_DeleteEditMoodActivity_selectImage"
         android:layout_width="240dp"
         android:layout_height="240dp"
         android:layout_marginTop="32dp"
@@ -61,10 +61,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_DeleteEditMoodFrag_title" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_DeleteEditMoodActivity_title" />
 
     <TextView
-        android:id="@+id/textView_DeleteEditMoodFrag_selectImagetext"
+        android:id="@+id/textView_DeleteEditMoodActivity_selectImagetext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="3dp"
@@ -72,10 +72,10 @@
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton_DeleteEditMoodFrag_selectImage" />
+        app:layout_constraintTop_toBottomOf="@+id/imageButton_DeleteEditMoodActivity_selectImage" />
 
     <Spinner
-        android:id="@+id/spinner_DeleteEditMoodFrag_currentMoodspinner"
+        android:id="@+id/spinner_DeleteEditMoodActivity_currentMoodspinner"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginStart="32dp"
@@ -88,10 +88,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_DeleteEditMoodFrag_selectImagetext" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_DeleteEditMoodActivity_selectImagetext" />
 
     <EditText
-        android:id="@+id/editText_DeleteEditMoodFrag_triggerInput"
+        android:id="@+id/editText_DeleteEditMoodActivity_triggerInput"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginStart="32dp"
@@ -104,10 +104,10 @@
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/spinner_DeleteEditMoodFrag_currentMoodspinner" />
+        app:layout_constraintTop_toBottomOf="@id/spinner_DeleteEditMoodActivity_currentMoodspinner" />
 
     <EditText
-        android:id="@+id/editText_DeleteEditMoodFrag_socialSituationinput"
+        android:id="@+id/editText_DeleteEditMoodActivity_socialSituationinput"
         android:layout_width="357dp"
         android:layout_height="117dp"
         android:layout_marginStart="32dp"
@@ -120,20 +120,21 @@
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editText_DeleteEditMoodFrag_triggerInput" />
+        app:layout_constraintTop_toBottomOf="@id/editText_DeleteEditMoodActivity_triggerInput" />
 
     <Switch
-        android:id="@+id/switch_DeleteEditMoodFrag_geoSwitch"
+        android:id="@+id/switch_DeleteEditMoodActivity_geoSwitch"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:text="Geolocation (Optional)"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editText_DeleteEditMoodFrag_socialSituationinput" />
+        app:layout_constraintTop_toBottomOf="@id/editText_DeleteEditMoodActivity_socialSituationinput"
+        tools:ignore="UseSwitchCompatOrMaterialXml" />
 
     <Button
-        android:id="@+id/button_DeleteEditMoodFrag_save"
+        android:id="@+id/button_DeleteEditMoodActivity_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
@@ -141,6 +142,6 @@
         android:text="Save"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/switch_DeleteEditMoodFrag_geoSwitch" />
+        app:layout_constraintTop_toBottomOf="@id/switch_DeleteEditMoodActivity_geoSwitch" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
