--- a/code/app/src/main/res/layout/activity_admin.xml
+++ b/code/app/src/main/res/layout/activity_admin.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:text="Welcome Administrator"
+            android:text="@string/welcome_administrator"
             android:textColor="@color/white"
             android:textSize="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
