--- a/code/app/src/main/res/layout/activity_edit_delete_mood.xml
+++ b/code/app/src/main/res/layout/activity_edit_delete_mood.xml
@@ -7,6 +7,8 @@
     android:layout_height="match_parent"
     android:background="@color/black_background">
 
+
+
     <Switch
         android:id="@+id/switch_ActivityEditDeleteMood_privacy"
         android:layout_width="wrap_content"
@@ -17,8 +19,12 @@
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/button_DeleteEditMoodActivity_save"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/switch_DeleteEditMoodActivity_geoSwitch"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_DeleteEditMoodActivity_socialsituation" />
+        app:layout_constraintTop_toBottomOf="@+id/spinner_DeleteEditMoodActivity_socialsituation"
+        app:layout_constraintVertical_bias="0.0" />
+
+
 
     <ImageButton
         android:id="@+id/imageButton_DeleteEditMoodActivity_back"
