--- a/code/app/src/main/res/layout/activity_mood_event_details.xml
+++ b/code/app/src/main/res/layout/activity_mood_event_details.xml
@@ -150,7 +150,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:hint="@string/location"
+        android:text="@string/location_unknown"
         android:textColorHint="#898888"
         app:layout_constraintStart_toStartOf="@+id/textview_ActivityMoodEventDetails_dateandtime"
         app:layout_constraintTop_toBottomOf="@+id/textview_ActivityMoodEventDetails_dateandtime" />
