--- a/code/app/src/main/res/layout/fragment_user_sign_up.xml
+++ b/code/app/src/main/res/layout/fragment_user_sign_up.xml
@@ -33,7 +33,7 @@
         android:id="@+id/button_UserSignUpFrag_createandlogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Create Account and Login"
+        android:text="@string/create_account_and_login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
@@ -46,7 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="Username"
+        android:hint="@string/username_user_sign_up"
         android:inputType="text"
         app:layout_constraintBottom_toTopOf="@+id/button_UserSignUpFrag_createandlogin"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,7 +60,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="Password"
+        android:hint="@string/password_user_sign_up"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,7 +70,7 @@
         android:id="@+id/editText_UserSignUpFrag_reEnterPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Re-enter Password"
+        android:hint="@string/re_enter_password"
         android:ems="10"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
