--- a/code/app/src/main/res/layout/activity_friend_mood_event_details.xml
+++ b/code/app/src/main/res/layout/activity_friend_mood_event_details.xml
@@ -159,6 +159,7 @@
 
     <ImageView
         android:id="@+id/imageview_placeholder"
+        android:backgroundTint="@color/black_background"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:contentDescription="Image placeholder"
