--- a/code/app/src/main/res/layout/fragment_add_comments_dialog_frag.xml
+++ b/code/app/src/main/res/layout/fragment_add_comments_dialog_frag.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#434343"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
