--- a/code/app/src/main/res/layout/activity_friend_mood_event_details.xml
+++ b/code/app/src/main/res/layout/activity_friend_mood_event_details.xml
@@ -1,21 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/constraintlayout_activitymoodeventdetails_level1"
+    android:id="@+id/constraintlayout_activityfriendmoodeventdetails_level1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black_background">
 
-    <!-- Back button -->
+    <!--
+    Code for adjusting image size of image button taken from: https://stackoverflow.com/questions/23461391/android-imagebutton-crops-on-resize/23461524
+    Authored by: Jack
+    Taken by: Ercel Angeles
+    Taken on: February 18, 2025
+    -->
+
     <ImageButton
         android:id="@+id/imagebutton_ActivityFriendMoodEventDetails_backbutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:background="@android:color/transparent"
-        android:contentDescription="Go back"
+        android:contentDescription="@string/go_back"
         android:maxWidth="40dp"
         android:maxHeight="40dp"
         android:scaleType="fitXY"
@@ -23,29 +28,46 @@
         android:translationY="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/textview_ActivityFriendMoodEventDetails_title"
         app:layout_constraintEnd_toStartOf="@+id/textview_ActivityFriendMoodEventDetails_title"
-        app:layout_constraintHorizontal_bias="0.595"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textview_ActivityFriendMoodEventDetails_title" />
+        app:layout_constraintTop_toTopOf="@+id/textview_ActivityFriendMoodEventDetails_title"
+        app:layout_constraintVertical_bias="1.0" />
 
-    <!-- Title -->
+    <ImageButton
+        android:id="@+id/imagebutton_ActivityFriendMoodEventDetails_editbutton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:background="@android:color/transparent"
+        android:maxWidth="40dp"
+        android:maxHeight="40dp"
+        android:scaleType="fitXY"
+        android:translationY="8dp"
+
+        app:layout_constraintBottom_toBottomOf="@+id/textview_ActivityFriendMoodEventDetails_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/textview_ActivityFriendMoodEventDetails_title"
+        app:layout_constraintTop_toTopOf="@+id/textview_ActivityFriendMoodEventDetails_title"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/ic_edit_button" />
+
     <TextView
         android:id="@+id/textview_ActivityFriendMoodEventDetails_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:fontFamily="monospace"
         android:text="Friend Mood Details"
         android:textColor="@color/white"
         android:textSize="24sp"
+        app:layout_constraintEnd_toStartOf="@id/imagebutton_ActivityFriendMoodEventDetails_editbutton"
         app:layout_constraintStart_toEndOf="@id/imagebutton_ActivityFriendMoodEventDetails_backbutton"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Gray box container -->
     <View
         android:id="@+id/view_ActivityFriendMoodEventDetails_moodeventcontainer"
-        android:layout_width="388dp"
-        android:layout_height="263dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="12dp"
@@ -58,33 +80,32 @@
         app:layout_constraintTop_toBottomOf="@+id/textview_ActivityFriendMoodEventDetails_title"
         app:layout_constraintVertical_bias="0.0" />
 
-    <!-- Username -->
     <TextView
         android:id="@+id/textview_ActivityFriendMoodEventDetails_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:hint="Username"
+        android:hint="@string/username"
         android:textColor="#FFFFFF"
         android:textColorHint="#898888"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/imageview_ActivityFriendMoodEventDetails_moodimage"
         app:layout_constraintTop_toTopOf="@+id/imageview_ActivityFriendMoodEventDetails_moodimage" />
 
-    <!-- Mood type -->
+
     <TextView
         android:id="@+id/textview_ActivityFriendMoodEventDetails_moodtype"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="60dp"
-        android:text="Mood Type:"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/textview_ActivityFriendMoodEventDetails_title"
-        app:layout_constraintTop_toBottomOf="@+id/textview_ActivityFriendMoodEventDetails_title" />
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="32dp"
+        android:hint="@string/happy"
+        android:textColor="#D1D1D1"
+        android:textColorHint="#898888"
+        android:textSize="16sp"
+        app:layout_constraintStart_toEndOf="@+id/imageview_ActivityFriendMoodEventDetails_moodimage"
+        app:layout_constraintTop_toTopOf="@+id/imageview_ActivityFriendMoodEventDetails_moodimage" />
 
-    <!-- Mood icon -->
     <ImageView
         android:id="@+id/imageview_ActivityFriendMoodEventDetails_moodimage"
         android:layout_width="wrap_content"
@@ -99,87 +120,82 @@
         app:layout_constraintTop_toTopOf="@+id/view_ActivityFriendMoodEventDetails_moodeventcontainer"
         app:srcCompat="@drawable/ic_happy_emoticon" />
 
-    <!-- Social situation -->
     <TextView
         android:id="@+id/textview_ActivityFriendMoodEventDetails_socialsituation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:hint="Social situation"
+        android:hint="@string/social_situation"
         android:textColorHint="#898888"
         app:layout_constraintStart_toStartOf="@+id/imageview_ActivityFriendMoodEventDetails_moodimage"
         app:layout_constraintTop_toBottomOf="@+id/imageview_ActivityFriendMoodEventDetails_moodimage" />
 
-    <!-- Date and time -->
     <TextView
         android:id="@+id/textview_ActivityFriendMoodEventDetails_dateandtime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:hint="Date and Time"
+        android:hint="@string/date_and_time"
         android:textColorHint="#898888"
-        app:layout_constraintStart_toStartOf="@+id/textview_ActivityFriendMoodEventDetails_trigger"
-        app:layout_constraintTop_toBottomOf="@+id/textview_ActivityFriendMoodEventDetails_trigger" />
+        app:layout_constraintStart_toStartOf="@+id/textview_ActivityFriendMoodEventDetails_triggervalue"
+        app:layout_constraintTop_toBottomOf="@+id/textview_ActivityFriendMoodEventDetails_triggervalue" />
 
-    <!-- Trigger value -->
     <TextView
         android:id="@+id/textview_ActivityFriendMoodEventDetails_triggervalue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:hint="trigger value"
-        android:textColorHint="#898888"
-        app:layout_constraintStart_toEndOf="@+id/textview_ActivityFriendMoodEventDetails_trigger"
-        app:layout_constraintTop_toTopOf="@+id/textview_ActivityFriendMoodEventDetails_trigger" />
-
-    <!-- Trigger label -->
-    <TextView
-        android:id="@+id/textview_ActivityFriendMoodEventDetails_trigger"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Trigger:"
-        android:textColor="#FFFFFF"
+        android:hint="@string/reason_value"
+        android:textColorHint="#898888"
         app:layout_constraintStart_toStartOf="@+id/textview_ActivityFriendMoodEventDetails_socialsituation"
         app:layout_constraintTop_toBottomOf="@+id/textview_ActivityFriendMoodEventDetails_socialsituation" />
 
-    <!-- Location -->
     <TextView
         android:id="@+id/textview_ActivityFriendMoodEventDetails_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:hint="Location"
+        android:text="@string/location_unknown"
         android:textColorHint="#898888"
         app:layout_constraintStart_toStartOf="@+id/textview_ActivityFriendMoodEventDetails_dateandtime"
         app:layout_constraintTop_toBottomOf="@+id/textview_ActivityFriendMoodEventDetails_dateandtime" />
 
-    <!-- Image container with ImageView placeholder -->
+    <Button
+        android:id="@+id/button_ActivityFriendMoodEventDetails_commentButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#22238B"
 
+        android:text="Comments"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageview_ActivityFriendMoodEventDetails_uploadedphoto" />
 
     <ImageView
-        android:id="@+id/imageview_placeholder"
-        android:backgroundTint="@color/black_background"
+        android:id="@+id/imageview_ActivityFriendMoodEventDetails_uploadedphoto"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:contentDescription="Image placeholder"
+        android:layout_marginTop="20dp"
+        android:background="@android:color/darker_gray"
         android:scaleType="centerCrop"
-        android:src="@drawable/ic_placeholder"
+        android:backgroundTint="@color/black_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view_ActivityFriendMoodEventDetails_moodeventcontainer" />
 
-
-    <!-- Comments button -->
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Comments"
-        android:backgroundTint="@color/primary_blue"
+    <ImageView
+        android:id="@+id/imageview_placeholder"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="@color/black_background"
+        android:contentDescription="Image placeholder"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_placeholder"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageview_placeholder" />
-
+        app:layout_constraintTop_toBottomOf="@+id/view_ActivityFriendMoodEventDetails_moodeventcontainer" />
 </androidx.constraintlayout.widget.ConstraintLayout>
