--- a/code/app/src/main/res/layout/fragment_admin_login.xml
+++ b/code/app/src/main/res/layout/fragment_admin_login.xml
@@ -19,7 +19,7 @@
 
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_mood_title" />
+        app:srcCompat="@drawable/ic_moods_title" />
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/button_AdminLoginFrag_back"
