--- a/code/app/src/main/res/layout/fragment_admin_login.xml
+++ b/code/app/src/main/res/layout/fragment_admin_login.xml
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="150dp"
         android:text="@string/admin_login_page_admin_login"
-        android:textColor="@color/white"
+        android:textColor="@color/mimi_pink"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ImageView_LoginUserSelection_appTitle" />
@@ -98,6 +98,7 @@
         android:layout_marginTop="10dp"
         android:backgroundTint="@color/primary_dark_grape"
         android:text="@string/sign_in_admin_login"
+        android:textColor="@color/mimi_pink"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textField_adminLoginFrag_password" />
