--- a/code/app/src/main/res/layout/fragment_follower_request.xml
+++ b/code/app/src/main/res/layout/fragment_follower_request.xml
@@ -39,6 +39,7 @@
         app:backgroundTint="@color/primary_dark_grape"
         android:backgroundTintMode="@color/primary_dark_grape"
         android:src="@drawable/ic_add"
+        android:tintMode="@color/mimi_pink"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
